// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/skeleton SkeletonAvatar should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--circle emotion-0 emotion-1"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
/>
`;

exports[`components/skeleton SkeletonButton should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
  style={
    Object {
      "height": 36,
      "width": 36,
    }
  }
/>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 1`] = `
.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-19 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-7 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  padding: 16px;
  margin-top: 10px;
  margin-left: 0;
}

.emotion-1 {
  margin-top: 10px;
  margin-left: 0;
}

<div
  className="emotion-2 emotion-19"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-7"
    style={Object {}}
  >
    <div
      className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-5"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
          size={14}
          style={
            Object {
              "height": 24,
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="emotion-2 emotion-7"
    style={Object {}}
  >
    <div
      className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-5"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
          style={
            Object {
              "height": 24,
              "width": "50%",
            }
          }
        />
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
          size={14}
          style={
            Object {
              "height": 12,
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 2`] = `
.emotion-7 {
  margin-top: 0;
  margin-left: 25px;
}

.emotion-15 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0px auto;
  width: 1100px;
}

.emotion-13 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
  height: 46px;
}

.emotion-55 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-53 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 50px auto;
  width: 1100px;
}

.emotion-51 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-29 {
  padding: 16px;
  padding-top: 75px;
  padding-bottom: 150px;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-27 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -25px;
}

.emotion-21 {
  margin-top: 25px;
  margin-left: 0;
}

<div>
  <div
    className="ui-skeleton-page-header emotion-0 emotion-1"
    style={Object {}}
  >
    <div
      className="ui-skeleton-page-header-heading emotion-0 emotion-1"
      style={
        Object {
          "width": 1100,
        }
      }
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "50%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      />
    </div>
    <div
      className="ui-skeleton-page-header-toolbar emotion-0 emotion-1"
      style={Object {}}
    >
      <div
        className="emotion-12 emotion-15"
        style={Object {}}
      >
        <div
          className="emotion-12 emotion-13"
          style={Object {}}
        >
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-7"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-7"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-7"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-12 emotion-55"
    style={Object {}}
  >
    <div
      className="emotion-12 emotion-53"
      style={Object {}}
    >
      <div
        className="emotion-12 emotion-51"
        style={Object {}}
      >
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle emotion-0 emotion-21"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle emotion-0 emotion-21"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle emotion-0 emotion-21"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-21"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonList should render shallow component ok 1`] = `
.emotion-25 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-7 {
  padding: 25px;
  margin-top: 10px;
  margin-left: 0;
}

.emotion-5 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
  overflow: hidden;
}

.emotion-1 {
  margin-top: 0;
  margin-left: 25px;
}

<div
  className="emotion-4 emotion-25"
  style={Object {}}
>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 emotion-0 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonText should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--square emotion-0 emotion-1"
  style={
    Object {
      "height": 12,
      "width": "50%",
    }
  }
/>
`;
